# Simple2DEngine

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: main.cpp.A3E9A84AD0583334.idx  main.h.F1B6ECF0909F2512.idx
src/: input.cpp  input.h  main.cpp
